[tool.poetry]
name = "change-stream-multiple-clusters"
version = "0.1.0"
description = ""
authors = ["yuvalherziger <yuvalhrz@gmail.com>"]
readme = "README.md"
packages = [{include = "change_stream_multiple_clusters"}]

[tool.poetry.dependencies]
python = "^3.9"
motor = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
